<resources>
    <string name="_new">New</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="accept_http_content">Accept only http(s)</string>
    <string name="access_control_mode">Access Control Mode</string>
    <string name="access_control_packages">Access Control Packages</string>
    <string name="access_control_packages_summary">Configure access permission for apps</string>
    <string name="active_unsaved_tips">Profile needs to be saved before activation</string>
    <string name="allow_all_apps">Allow all apps</string>
    <string name="allow_bypass">Allow Bypass</string>
    <string name="allow_bypass_summary">Allows all apps to bypass this VPN connection</string>
    <string name="allow_clash_auto_restart">Allow clash auto restart</string>
    <string name="allow_ipv6">Allow Ipv6</string>
    <string name="allow_ipv6_summary">Allows ipv6 traffic via VpnService</string>
    <string name="allow_lan">Allow LAN</string>
    <string name="allow_origins">External Controller Allow Origins</string>
    <string name="allow_private_network">External Controller Allow Private Network</string>
    <string name="allow_selected_apps">Allow selected apps</string>
    <string name="always">Always</string>
    <string name="always_dark">Always Dark</string>
    <string name="always_light">Always Light</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app">App</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="append_system_dns">Append System DNS</string>
    <string name="application_broken">Application Broken</string>
    <string name="application_broken_tips">App lacks the necessary runtime components, which is usually caused by downloading an incomplete apk.</string>
    <string name="application_crashed">Application Crashed</string>
    <string name="application_name">@string/application_name_meta</string>
    <string name="application_name_alpha">SONYtraffic Alpha</string>
    <string name="application_name_meta">SONYtraffic</string>
    <string name="at_least_15_minutes">At least 15 minutes or empty</string>
    <string name="authentication">Authentication</string>
    <string name="auto_restart">Auto Restart</string>
    <string name="auto_update">Auto Update</string>
    <string name="auto_update_minutes">Auto Update (Minutes)</string>
    <string name="behavior">Behavior</string>
    <string name="bind_address">Bind Address</string>
    <string name="blacklist">Black List</string>
    <string name="block_loopback">Block Loopback</string>
    <string name="block_loopback_summary">Block loopback connections</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="browse_configuration_providers">Browse configuration &amp; providers</string>
    <string name="browse_files">Browse Files</string>
    <string name="bypass_private_network">Bypass Private Network</string>
    <string name="bypass_private_network_summary">Bypass private network addresses</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clash_logcat">Clash Logcat</string>
    <string name="clash_meta_core">Clash Meta Core</string>
    <string name="clash_meta_core_url">https://github.com/MetaCubeX/Clash.Meta</string>
    <string name="clash_meta_for_android">Clash Meta for Android</string>
    <string name="clash_meta_wiki">Clash Meta Wiki</string>
    <string name="clash_meta_wiki_url">https://wiki.metacubex.one</string>
    <string name="clash_notification_content">%1$s↑\u0009%2$s↓</string>
    <string name="clash_service_status_channel">Clash Status</string>
    <string name="clash_wiki">Clash Wiki</string>
    <string name="clash_wiki_url">https://github.com/Dreamacro/clash/wiki</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close">Close</string>
    <string name="compatible">Compatible</string>
    <string name="configuration_yaml">Configuration.yaml</string>
    <string name="copied">Copied</string>
    <string name="create_profile">Create Profile</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="debug">Debug</string>
    <string name="default_">Default</string>
    <string name="default_name_server">Default Name Server</string>
    <string name="delay">Delay</string>
    <string name="delay_test">Delay Test</string>
    <string name="delete">Delete</string>
    <string name="delete_all_logs">Delete All Logs</string>
    <string name="delete_all_logs_warn">All historical logs will *LOST*</string>
    <string name="deny_selected_apps">Deny selected apps</string>
    <string name="detail">Detail</string>
    <string name="direct_mode">Direct Mode</string>
    <string name="disabled">Disabled</string>
    <string name="dns">DNS</string>
    <string name="dns_hijacking">DNS Hijacking</string>
    <string name="dns_hijacking_summary">Handle all dns packet</string>
    <string name="document">Document</string>
    <string name="domain_fallback">Domain Fallback</string>
    <string name="donate">Donate</string>
    <string name="dont_modify">Do not modify</string>
    <string name="doubles">Double</string>
    <string name="duplicate">Duplicate</string>
    <string name="edit">Edit</string>
    <string name="empty">Empty</string>
    <string name="empty_name">Empty Name</string>
    <string name="enabled">Enabled</string>
    <string name="enhanced_mode">Enhanced Mode</string>
    <string name="error">Error</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exit_without_save">Exit without Save</string>
    <string name="exit_without_save_warning">All changed will *LOST*</string>
    <string name="export">Export</string>
    <string name="export_to_clipboard">Export to Clipboard</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="external">External</string>
    <string name="external_control_activity">External Control</string>
    <string name="external_control_started">Clash.Meta service started</string>
    <string name="external_control_stopped">Clash.Meta service stopped</string>
    <string name="external_controller">External Controller</string>
    <string name="external_controller_tls">External Controller TLS</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fakeip">Fake-IP to domain mapping</string>
    <string name="fakeip_filter">Fake-IP Filter</string>
    <string name="fakeip_filter_mode">Fake-IP Filter Mode</string>
    <string name="fallback">Fallback Name Server</string>
    <string name="feedback">Feedback</string>
    <string name="file">File</string>
    <string name="file_exported">File Exported</string>
    <string name="file_name">File Name</string>
    <string name="files">Files</string>
    <string name="filter">Filter</string>
    <string name="find_process_mode">Find Process Mode</string>
    <string name="follow_system_android_10">Follow System (Android 10+)</string>
    <string name="force_dns_mapping">Force DNS Mapping</string>
    <string name="force_domain">Force Domain</string>
    <string name="force_enable">Force Enable</string>
    <string name="format_days_ago">%d days ago</string>
    <string name="format_elements">%d elements</string>
    <string name="format_fetching_configuration">"Fetching configuration from '%s'"</string>
    <string name="format_fetching_provider">"Fetching provider '%s'"</string>
    <string name="format_hours_ago">%d hours ago</string>
    <string name="format_minutes">%d min</string>
    <string name="format_minutes_ago">%d min ago</string>
    <string name="format_months_ago">%d months ago</string>
    <string name="format_profile_activated">%s Activated</string>
    <string name="format_provider_type">%1$s(%2$s)</string>
    <string name="format_traffic_forwarded">%s Forwarded</string>
    <string name="format_type_unsaved">%s (Unsaved)</string>
    <string name="format_update_complete">Update %s completed</string>
    <string name="format_update_failure">Update %1$s: %2$s</string>
    <string name="format_update_provider_failure">Update %1$s: %2$s</string>
    <string name="format_years_ago">%d years ago</string>
    <string name="general">General</string>
    <string name="geodata_mode">Geodata Mode</string>
    <string name="geofile_import_failed">Import failed</string>
    <string name="geofile_imported">%1$s imported</string>
    <string name="geofile_unknown_db_format">Unknown Database format</string>
    <string name="geofile_unknown_db_format_message">Only %1$s are supported</string>
    <string name="geoip_fallback">GeoIP Fallback</string>
    <string name="geoip_fallback_code">GeoIP Fallback Code</string>
    <string name="geoip_url">https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/release/geoip.dat</string>
    <string name="geosite_url">https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/release/geosite.dat</string>
    <string name="geox_files">Geo Files</string>
    <string name="geox_geoip">GeoIp Url</string>
    <string name="geox_geosite">Geosite Url</string>
    <string name="geox_mmdb">MMDB Url</string>
    <string name="geox_url_setting">GeoX Url Setting</string>
    <string name="github_issues">Github Issues</string>
    <string name="import_">Import</string>
    <string name="rename">Rename</string>
    <string name="update">Update</string>
</resources>